# ffplay

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/dai/anroid/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/demo/: demo-audio-test.pcm
app/src/main/cpp/: CMakeLists.txt  dai_android_media_ffplay_MainActivity.cpp  demo.h  jni_AudioPlayer.cpp  jni_MainActivity.cpp  jni_PCM_demo.cpp  jni_XMediaPlayer.cc  jni_YUV_demo.cc  jni_YUV_demo_book.cc  jni_demo.cpp
app/src/main/cpp/nativehelper/: ALogger.h  JNIHelp.cpp  JNIHelp.h  JniConstants.cpp  JniConstants.h  ScopedLocalRef.h  ScopedStringChars.h  UniquePtr.h  toStringArray.h
app/src/main/cpp/opensles/: OpenAudio.cpp  OpenAudio.h
app/src/main/cpp/xplayer/: FFDecode.cc  FFDecode.h  FFDemux.cc  FFDemux.h  GLVideoView.cc  GLVideoView.h  IDecode.cc  IDecode.h  IDemux.cc  IDemux.h  IObserver.cc  IObserver.h  IVideoView.cc  IVideoView.h  XData.cc  XData.h  XEGL.cc  XEGL.h  XLog.cc  XLog.h  XParameter.cc  XParameter.h  XShader.cc  XShader.h  XTexture.cc  XTexture.h  XThread.cc  XThread.h
app/src/main/java/dai/android/media/ffplay/: MainActivity.java  RecorderActivity.java  ThisApplication.java  XGLSurfaceView.java  YuvPlayActivity.java
app/src/main/java/dai/android/media/player/: AbstractTypedPlayer.java  BasePlayer.java  BasePlayerImpl.java  DataSourceInner.java  IBasePlayerListener.java  IData4Ui.java  IDataSource.java  IDefinition.java  IMiscMediaPlayer.java  IPlayer.java  MediaType.java  MiscMediaPlayer.java  PlayerType.java  Uid.java
app/src/main/java/dai/android/media/player/state/: IState.java
app/src/main/java/dai/android/media/xplayer/: XMediaPlayer.java
app/src/main/java/dai/anroid/media/: MainActivity.java
app/src/main/java/dai/anroid/media/ffplay/: MainActivity.java  RecorderActivity.java  ThisApplication.java
app/src/main/java/dai/anroid/media/player/: AbstractTypedPlayer.java  BasePlayer.java  BasePlayerImpl.java  DataSourceInner.java  IBasePlayerListener.java  IData4Ui.java  IDataSource.java  IDefinition.java  IMediaPlayer.java  IMiscMediaPlayer.java  IPlayer.java  MediaType.java  MiscMediaPlayer.java  PlayerType.java  Uid.java
app/src/main/java/dai/anroid/media/player/state/: IState.java
app/src/main/res/layout/: activity_main.xml  activity_recorder.xml  activity_yuv_play.xml  stub_surface_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/dai/anroid/media/: ExampleUnitTest.java
ffmpeg/: BuildFfmpegForAndroid.sh  BuildFfmpegForAndroidV2.sh  android_ffmepg_build.sh  android_ffmepg_config.sh
gradle/wrapper/: gradle-wrapper.properties
